; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_sec_mgr.c_map_uri_to_zone.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_sec_mgr.c_map_uri_to_zone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PSU_SECURITY_URL_ONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32**)* @map_uri_to_zone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @map_uri_to_zone(i32* %0, i32* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32** %2, i32*** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @PSU_SECURITY_URL_ONLY, align 4
  %12 = call i32 @CoInternetGetSecurityUrlEx(i32* %10, i32** %9, i32 %11, i32 0)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i64 @FAILED(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %4, align 4
  br label %36

18:                                               ; preds = %3
  %19 = load i32*, i32** %9, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @map_security_uri_to_zone(i32* %19, i32* %20)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i64 @FAILED(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %18
  %26 = load i32**, i32*** %7, align 8
  %27 = icmp ne i32** %26, null
  br i1 %27, label %31, label %28

28:                                               ; preds = %25, %18
  %29 = load i32*, i32** %9, align 8
  %30 = call i32 @IUri_Release(i32* %29)
  br label %34

31:                                               ; preds = %25
  %32 = load i32*, i32** %9, align 8
  %33 = load i32**, i32*** %7, align 8
  store i32* %32, i32** %33, align 8
  br label %34

34:                                               ; preds = %31, %28
  %35 = load i32, i32* %8, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %34, %16
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @CoInternetGetSecurityUrlEx(i32*, i32**, i32, i32) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @map_security_uri_to_zone(i32*, i32*) #1

declare dso_local i32 @IUri_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
